fix z-index issue (popup appearing over fixed header)

--- a/addons/skins/Default/resources/styles.css
+++ b/addons/skins/Default/resources/styles.css
@@ -41,7 +41,7 @@ p, ul, pre {line-height:1.6em}
 
 
 /* Header */
-#hdr {background:#364159; color:#fff; position:fixed; width:100%; z-index:100}
+#hdr {background:#364159; color:#fff; position:fixed; width:100%; z-index:350}
 #hdr-inner {padding-right:580px; white-space:nowrap}
 #hdr h1 {display:inline-block; max-width:100%; font-size:120%; padding:16px 0; margin:0; font-weight:bold; overflow:hidden; white-space:nowrap; text-overflow:ellipsis}
 #hdr h1 img {margin:-9px 0; display:inline; vertical-align:bottom; border:0}
